src/docs/v2/dependencies/change-log.md
---
layout: doc
---

# 更新记录

## 2.0.0（2026-3-24）

- 修改父级为spring-boot-dependencies 4.0.4
- 升级commons-csv至 1.14.1
- 升级guava至 33.5.0-jre
- 升级sa-token至 1.45.0
- 新增hanlp portable-1.8.6
- 去除commons-validator
- 新增batik-rasterizer-ext 1.19
- 新增batik-extension 1.19
- 新增batik-anim 1.19
- 新增batik-svggen 1.19
- 新增batik-transcoder 1.19
- 新增twelvemonkeys 3.13.1
- 新增boofcv-core 1.3.0
- 新增lz4-java 1.10.4
- 新增poi-scratchpad 5.4.1
- 升级commons-collections4至 4.5.0
- 升级commons-compress至 1.28.0
- 升级commons-exec至 1.6.0
- 升级commons-configuration2至 2.13.0
- 升级mybatis-plus至 3.5.16
- 升级smart-doc-maven-plugin至 3.1.0
- 新增jsoup 1.22.1
- 新增ipaddress 5.6.2
- 升级commons-io至 2.21.0
- 升级commons-net至 3.13.0
- 升级commons-text至 1.15.0
- 升级poi至 5.5.1
- 新增datafaker 2.5.4
- 升级dom4j至 2.2.0
- 升级fastexcel至 1.3.0
- 升级pdfbox至 3.0.7
- 升级tika至 3.2.3
- 升级thumbnailator至 0.4.21
- 升级gmavenplus-plugin至 4.3.1
- 升级maven-gpg-plugin至 3.2.8
- 升级smart-doc-maven.plugin至 3.1.2
- 新增zero-allocation-hashing 2026.0
- 新增zip4j 2.11.6
- chore：升级xz至 1.12
- 去除dynamic-datasource-spring-boot3-starter
- 新增dynamic-datasource-spring-boot4-starter 4.5.0
- 升级mybatis-spring至 4.0.0
- 升级mybatis-spring-boot-starter至 4.0.1
- 升级redisson至 4.3.0
- 升级spring-vault至 4.1.0-M1
- 去除spockframework
- 新增spock-bom 2.4-groovy-5.0
- 升级java-jwt至 4.5.1
- 升级resilience4j至 2.4.0
- 去除jpinyin
- 去除xmpbox
- 去除expiringmap
